# CMakeLists_demo

./: CMakeLists.txt  README.md
alg/: CMakeLists.txt
alg/add/: CMakeLists.txt  add.c
alg/sub/: CMakeLists.txt  sub.c
examples/: CMakeLists.txt  add_example.c  sub_example.c
output/include/: alg.h
